# poo

./: .gitattributes  .gitignore  HoF.md  README.md  colocviu.md  erori.md  motivație.md  obs.md  planificare_laborator.txt  repetitiv.md  ub.md
altele/2020-2021/l1_251/: CMakeLists.txt  main.cpp
altele/proiect2/: Agent.cpp  Agent.h  AgentFoarfeca.cpp  AgentFoarfeca.h  CMakeLists.txt  simulation_error.h  timeout_error.h
colocviu/: CMakeLists.txt  README.md  greseli.md  ian2023.md  ian2025.md  ian2026.md  rezolvare_ian2026.cpp
env/: README.md  setup.md  vscodium.md
exercitii/: README.md
exercitii/laborator-1/: 1_liste_simplu_inlantuite.cpp  CMakeLists.txt  lista_simpla.h  test_liste_simplu_inlantuite.cpp
laborator-1/: README.md
laborator-1/l1_252/: CMakeLists.txt  main.cpp
laborator-2/: README.md
laborator-3/: README.md
laborator-4/: README.md
laborator-5/: README.md
libs/: README.md
proiect2/: .gitignore  Agent.h  AgentHartie.cpp  AgentHartie.h  AgentPiatra.cpp  AgentPiatra.h  Simulare.cpp  Simulare.h  main.cpp  map_full_error.cpp  map_full_error.h  simulation_error.cpp  timeout_error.cpp
tema-1/: README.md  README0.md  intro_recap_c_cpp.md  teme_propuse.md
tema-2/: README.md
tema-3/: README.md
